svn merge -c 1311959 from trunk for MAPREDUCE-4057.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1311960 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -125,6 +125,9 @@ Release 2.0.0 - UNRELEASED
     MAPREDUCE-3869. Fix classpath for DistributedShell application. (Devaraj K
     via sseth)
 
+    MAPREDUCE-4057. Update RAID for the HA and fsdataset changes.  (Devaraj K
+    via szetszwo)
+
 Release 0.23.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
