svn merge -c 1311972 from trunk. FIXES: MAPREDUCE-4017. Add jobname to jobsummary log (tgraves and Koji Noguchi via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1311973 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -199,6 +199,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4099. ApplicationMaster may fail to remove staging directory
     (Jason Lowe via bobby)
 
+    MAPREDUCE-4017. Add jobname to jobsummary log (tgraves and Koji Noguchi
+    via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
