svn merge -c 1312003 from trunk. FIXES: MAPREDUCE-4076. Stream job fails with ZipException when use yarn jar command (Devaraj K via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1312004 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -128,6 +128,9 @@ Release 2.0.0 - UNRELEASED
     MAPREDUCE-4057. Update RAID for the HA and fsdataset changes.  (Devaraj K
     via szetszwo)
 
+    MAPREDUCE-4076. Stream job fails with ZipException when use yarn jar
+    command (Devaraj K via bobby)
+
 Release 0.23.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
