HDFS-3244. svn merge -c 1312061 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1312065 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -234,6 +234,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3094. add -nonInteractive and -force option to namenode -format
     command (Arpit Gupta via todd)
 
+    HDFS-3244. Remove dead writable code from hdfs/protocol. (eli)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
