--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -236,6 +236,9 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3244. Remove dead writable code from hdfs/protocol. (eli)
 
+    HDFS-3247. Improve bootstrapStandby behavior when original NN is not active
+    (todd)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
