HDFS-3254. Branch-2 build broken due to wrong version number in fuse-dfs' pom.xml. Contributed by Anupam Seth
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1324856 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -370,6 +370,9 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-2696. Fix the fuse-fds build. (Bruno Mahé via eli)
 
+    HDFS-3254. Branch-2 build broken due to wrong version number in
+    fuse-dfs' pom.xml. (Anupam Seth via eli)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
