--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -389,6 +389,8 @@ Release 2.0.0 - UNRELEASED
     HDFS-3256. HDFS considers blocks under-replicated if topology script is
     configured with only 1 rack. (atm)
 
+    HDFS-2799. Trim fs.checkpoint.dir values. (Amith D K via eli)
+
   BREAKDOWN OF HDFS-1623 SUBTASKS
 
     HDFS-2179. Add fencing framework and mechanisms for NameNode HA. (todd)
