svn merge -c 1326762 from trunk for HDFS-3279. Move the FSEditLog constructor with @VisibleForTesting to TestEditLog.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1326818 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -251,6 +251,9 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-2708. Stats for the # of blocks per DN. (atm)
 
+    HDFS-3279. Move the FSEditLog constructor with @VisibleForTesting to
+    TestEditLog.  (Arpit Gupta via szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-2477. Optimize computing the diff between a block report and the
