svn merge -c 1327108 from trunk. FIXES: HADOOP-8286. Simplify getting a socket address from conf (Daryn Sharp via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1327109 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -328,6 +328,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8283. Allow tests to control token service value (Daryn Sharp via
     bobby)
 
+    HADOOP-8286. Simplify getting a socket address from conf (Daryn Sharp via
+    bobby)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
