svn merge -c 1327127 from trunk. FIXES: HADOOP-8227. Allow RPC to limit ephemeral port range. (bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1327130 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -331,6 +331,8 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8286. Simplify getting a socket address from conf (Daryn Sharp via
     bobby)
 
+    HADOOP-8227. Allow RPC to limit ephemeral port range. (bobby)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
