svn merge -c 1327621 from trunk. FIXES: MAPREDUCE-4161. create sockets consistently (Daryn Sharp via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1327624 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -170,6 +170,8 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-3972. Fix locking and exception issues in JobHistory server.
     (Robert Joseph Evans via sseth)
 
+    MAPREDUCE-4161. create sockets consistently (Daryn Sharp via bobby)
+
   OPTIMIZATIONS
 
   BUG FIXES
