MAPREDUCE-4165. Committing is misspelled as commiting in task logs (John Eagles via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1328087 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -266,6 +266,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4159. Job is running in Uber mode after setting 
     "mapreduce.job.ubertask.maxreduces" to zero (Devaraj K via bobby)
 
+    MAPREDUCE-4165. Committing is misspelled as commiting in task logs
+    (John Eagles via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
