--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -272,6 +272,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4165. Committing is misspelled as commiting in task logs
     (John Eagles via bobby)
 
+    MAPREDUCE-4129. Lots of unneeded counters log messages (Ahmed Radwan via
+    bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
