svn merge -c 1328111, FIXES: MAPREDUCE-3947. yarn.app.mapreduce.am.resource.mb not documented (Devaraj K via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1328112 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -277,6 +277,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4129. Lots of unneeded counters log messages (Ahmed Radwan via
     bobby)
 
+    MAPREDUCE-3947. yarn.app.mapreduce.am.resource.mb not documented 
+    (Devaraj K via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
