--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -283,6 +283,10 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-3947. yarn.app.mapreduce.am.resource.mb not documented 
     (Devaraj K via bobby)
 
+    MAPREDUCE-4190. Improve web UI for task attempts userlog link (Tom Graves
+    via bobby)
+
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
