svn merge -c 1329403. FIXES: MAPREDUCE-4133. MR over viewfs is broken (John George via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1329405 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -286,6 +286,7 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4190. Improve web UI for task attempts userlog link (Tom Graves
     via bobby)
 
+    MAPREDUCE-4133. MR over viewfs is broken (John George via bobby)
 
 Release 0.23.2 - UNRELEASED
 
