--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -767,6 +767,9 @@ Release 0.23.3 - UNRELEASED
     HDFS-3308. Uses canonical URI to select delegation tokens in HftpFileSystem
     and WebHdfsFileSystem.  (Daryn Sharp via szetszwo)
 
+    HDFS-3312. In HftpFileSystem, the namenode URI is non-secure but the
+    delegation tokens have to use secure URI.  (Daryn Sharp via szetszwo)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
