svn merge -c 1330064 from trunk for HDFS-3298. Add HdfsDataOutputStream as a public API.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1330437 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -81,6 +81,8 @@ Release 2.0.0 - UNRELEASED
 
     HDFS-3282. Add HdfsDataInputStream as a public API. (umamahesh)
 
+    HDFS-3298. Add HdfsDataOutputStream as a public API.  (szetszwo)
+
   IMPROVEMENTS
 
     HDFS-2018. Move all journal stream management code into one place.
