--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -779,6 +779,8 @@ Release 0.23.3 - UNRELEASED
     HDFS-3318. Use BoundedInputStream in ByteRangeInputStream, otherwise, it
     hangs on transfers >2 GB.  (Daryn Sharp via szetszwo)
 
+    HDFS-3321. Fix safe mode turn off tip message.  (Ravi Prakash via szetszwo)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
