--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -260,6 +260,8 @@ Release 2.0.0 - UNRELEASED
 
     HADOOP-8296. hadoop/yarn daemonlog usage wrong (Devaraj K via tgraves)
 
+    HADOOP-8310. FileContext#checkPath should handle URIs with no port. (atm)
+
   BREAKDOWN OF HADOOP-7454 SUBTASKS
 
     HADOOP-7455. HA: Introduce HA Service Protocol Interface. (suresh)
