--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -309,6 +309,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4169. Container Logs appear in unsorted order (Jonathan Eagles
     via bobby)
 
+    MAPREDUCE-4189. TestContainerManagerSecurity is failing (Devaraj K via
+    bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
