svn merge -c 1332226. FIXES: MAPREDUCE-4209. junit dependency in hadoop-mapreduce-client is missing scope test (Radim Kolar via bobby)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1332227 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -315,6 +315,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4189. TestContainerManagerSecurity is failing (Devaraj K via
     bobby)
 
+    MAPREDUCE-4209. junit dependency in hadoop-mapreduce-client is missing
+    scope test (Radim Kolar via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
