svn merge -c 1332363 from trunk for HADOOP-8330.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1332364 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -368,6 +368,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8334. HttpServer sometimes returns incorrect port (Daryn Sharp via
     bobby)
 
+    HADOOP-8330. Update TestSequenceFile.testCreateUsesFsArg() for HADOOP-8305.
+    (John George via szetszwo)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
