--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -371,6 +371,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8330. Update TestSequenceFile.testCreateUsesFsArg() for HADOOP-8305.
     (John George via szetszwo)
 
+    HADOOP-8335. Improve Configuration's address handling (Daryn Sharp via
+    bobby)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
