--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -322,6 +322,9 @@ Release 2.0.0 - UNRELEASED
     HADOOP-8317. Update maven-assembly-plugin to 2.3 - fix build on FreeBSD
     (Radim Kolar via bobby)
 
+    HADOOP-8172. Configuration no longer sets all keys in a deprecated key 
+    list. (Anupam Seth via bobby)
+
 Release 0.23.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
